<?xml version="1.0"?>
<package format="2">
  <name>avp_mapping</name>
  <version>0.0.0</version>
  <description>The avp_mapping package</description>
  <maintainer email="2356940823@qq.com">赵浩武</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
